# dc-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  deployCommands.js  docker-compose.yaml  index.js  package-lock.json
.github/workflows/: docker-image.yml
commands/utility/: add.js  video.js
src/: main.rs
