[package]
name = "dc-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12" }

[dependencies.serenity]
version = "0.12"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "voice"]

[dependencies.songbird]
version = "0.5"
features = ["builtin-queue"]

[dependencies.poise]
version = "0.6"

[dependencies.symphonia]
version = "0.5"
features = ["aac", "mp3", "isomp4", "alac"] 
